🎨 First setup with tailwind+unpoly

--- a/package.json
+++ b/package.json
@@ -47,13 +47,18 @@
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
     "adonis-preset-ts": "^2.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^4.2.1",
     "pino-pretty": "^10.0.0",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.2.4",
     "prettier": "^2.8.8",
-    "typescript": "~4.6",
+    "tailwindcss": "^3.3.2",
+    "ts-loader": "^9.4.2",
+    "typescript": "~5.0.4",
     "webpack": "^5.72",
     "webpack-cli": "^4.9.1",
     "youch": "^3.2.3",
@@ -67,6 +72,7 @@
     "@adonisjs/view": "^6.1.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.21"
+    "source-map-support": "^0.5.21",
+    "unpoly": "^3.0.0"
   }
 }
