--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "include": ["**/*"],
   "exclude": ["node_modules", "build"],
   "compilerOptions": {
+    "lib": ["dom"],
     "outDir": "build",
     "rootDir": "./",
     "sourceMap": true,
