--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
     "@adonisjs/session": "^6.2.0",
     "@adonisjs/shield": "^7.0.0",
     "@adonisjs/view": "^6.1.0",
+    "@babel/plugin-transform-react-jsx": "^7.22.3",
+    "preact": "^10.15.1",
+    "preact-custom-element": "^4.2.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
