--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3.1'
 
 services:
+  # adonis_app:
+  #   container_name: adonis_app
+  #   restart: always
+  #   image: dcr.fredkiss.dev/todo-ultra
+  #   ports:
+  #     - 8090:80
+  #     - 9229:9229
+  #   env_file:
+  #     - .env
   mongo:
     image: mongo
     restart: always
