➕ Add REDIS configured for sessions

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,9 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=ef8zSfp123aTNNMQHAB8W8f-kw7-qIUB
 DRIVE_DISK=local
-SESSION_DRIVER=cookie
+SESSION_DRIVER=redis
 CACHE_VIEWS=false
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=redis_password
