➕ Add prisma and setup mongodb

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ REDIS_CONNECTION=local
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=redis_password
+DATABASE_URL="mongodb://root:password@localhost:27017/todo-ultra?authSource=admin&tls=false"
