--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -4,7 +4,8 @@
     "./commands",
     "@adonisjs/core/build/commands/index.js",
     "@adonisjs/repl/build/commands",
-    "@melchyore/adonis-cache/build/commands"
+    "@melchyore/adonis-cache/build/commands",
+    "@wahyubucil/adonis-prisma/build/commands"
   ],
   "exceptionHandlerNamespace": "App/Exceptions/Handler",
   "aliases": {
@@ -24,7 +25,8 @@
     "@adonisjs/view",
     "@adonisjs/shield",
     "@adonisjs/redis",
-    "@melchyore/adonis-cache"
+    "@melchyore/adonis-cache",
+    "@wahyubucil/adonis-prisma"
   ],
   "metaFiles": [
     {
