--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,19 +16,18 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_REPLICA_SET_NAME: rs0
     ports:
       - '27017:27017'
     volumes:
       - mongodb-data:/data/db
-  mongo-express:
-    image: mongo-express
-    restart: always
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_URL: mongodb://root:password@mongo:27017/
+      - ./mongodb_keyfile:/opt/keyfile/keyfile
+    healthcheck:
+      test: |
+        test $$(mongosh --quiet -u root -p password --eval "try { rs.initiate({ _id: 'rs0', members: [{ _id: 0, host: 'localhost' }] }).ok } catch (_) { rs.status().ok }") -eq 1
+      interval: 10s
+      start_period: 30s
+    command: '--bind_ip_all --keyFile /opt/keyfile/keyfile --replSet rs0'
   redis:
     image: redis
     environment:
