--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss": "^8.4.23",
     "postcss-loader": "^7.2.4",
     "prettier": "^2.8.8",
+    "prisma": "^4.15.0",
     "tailwindcss": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "~5.0.4",
@@ -73,6 +74,8 @@
     "@adonisjs/view": "^6.1.0",
     "@babel/plugin-transform-react-jsx": "^7.22.3",
     "@melchyore/adonis-cache": "^1.0.6",
+    "@prisma/client": "^4.15.0",
+    "@wahyubucil/adonis-prisma": "^0.4.0",
     "pino-pretty": "^10.0.0",
     "preact": "^10.15.1",
     "preact-custom-element": "^4.2.1",
