--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,8 @@
       "@adonisjs/shield",
       "@japa/preset-adonis/build/adonis-typings",
       "@adonisjs/redis",
-      "@melchyore/adonis-cache"
+      "@melchyore/adonis-cache",
+      "@wahyubucil/adonis-prisma"
     ]
   }
 }
