--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -16,7 +16,8 @@
   },
   "preloads": [
     "./start/routes",
-    "./start/kernel"
+    "./start/kernel",
+    "./start/globals"
   ],
   "providers": [
     "./providers/AppProvider",
