--- a/package.json
+++ b/package.json
@@ -76,12 +76,14 @@
     "@melchyore/adonis-cache": "^1.0.6",
     "@prisma/client": "^4.15.0",
     "@wahyubucil/adonis-prisma": "^0.4.0",
+    "clsx": "^1.2.1",
     "pino-pretty": "^10.0.0",
     "preact": "^10.15.1",
     "preact-custom-element": "^4.2.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "tailwind-merge": "^1.13.0",
     "unpoly": "^3.0.0"
   }
 }
