Setup local environment (#5)
* 🔧 setup Docker & Dockerfile for development

* ➕ Add REDIS configured for sessions

* ➕ Added adonis-cache

* ➕ Add prisma and setup mongodb

* 💄 Setup edge components folder

* ✨ Add clsx global for class concatenation in edge components

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -3,7 +3,9 @@
   "commands": [
     "./commands",
     "@adonisjs/core/build/commands/index.js",
-    "@adonisjs/repl/build/commands"
+    "@adonisjs/repl/build/commands",
+    "@melchyore/adonis-cache/build/commands",
+    "@wahyubucil/adonis-prisma/build/commands"
   ],
   "exceptionHandlerNamespace": "App/Exceptions/Handler",
   "aliases": {
@@ -12,13 +14,20 @@
     "Database": "database",
     "Contracts": "contracts"
   },
-  "preloads": ["./start/routes", "./start/kernel"],
+  "preloads": [
+    "./start/routes",
+    "./start/kernel",
+    "./start/globals"
+  ],
   "providers": [
     "./providers/AppProvider",
     "@adonisjs/core",
     "@adonisjs/session",
     "@adonisjs/view",
-    "@adonisjs/shield"
+    "@adonisjs/shield",
+    "@adonisjs/redis",
+    "@melchyore/adonis-cache",
+    "@wahyubucil/adonis-prisma"
   ],
   "metaFiles": [
     {
@@ -30,15 +39,21 @@
       "reloadServer": false
     }
   ],
-  "aceProviders": ["@adonisjs/repl"],
+  "aceProviders": [
+    "@adonisjs/repl"
+  ],
   "tests": {
     "suites": [
       {
         "name": "functional",
-        "files": ["tests/functional/**/*.spec(.ts|.js)"],
+        "files": [
+          "tests/functional/**/*.spec(.ts|.js)"
+        ],
         "timeout": 60000
       }
     ]
   },
-  "testProviders": ["@japa/preset-adonis/TestsProvider"]
+  "testProviders": [
+    "@japa/preset-adonis/TestsProvider"
+  ]
 }
