➕  Add & configure auth package

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -27,7 +27,8 @@
     "@adonisjs/shield",
     "@adonisjs/redis",
     "@melchyore/adonis-cache",
-    "@wahyubucil/adonis-prisma"
+    "@wahyubucil/adonis-prisma",
+    "@adonisjs/auth"
   ],
   "metaFiles": [
     {
