🔒️ Add github oauth

--- a/.adonisrc.json
+++ b/.adonisrc.json
@@ -29,7 +29,8 @@
     "@adonisjs/redis",
     "@melchyore/adonis-cache",
     "@wahyubucil/adonis-prisma",
-    "@adonisjs/auth"
+    "@adonisjs/auth",
+    "@adonisjs/ally"
   ],
   "metaFiles": [
     {
