--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,8 @@
       "@adonisjs/redis",
       "@melchyore/adonis-cache",
       "@wahyubucil/adonis-prisma",
-      "@adonisjs/auth"
+      "@adonisjs/auth",
+      "@adonisjs/ally"
     ]
   }
 }
