--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_PASSWORD=redis_password
 DATABASE_URL="mongodb://root:password@localhost:27017/todo-ultra?authSource=admin&tls=false"
+GITHUB_CLIENT_ID=clientId
+GITHUB_CLIENT_SECRET=clientSecret
+GITHUB_CLIENT_REDIRECT_URI=http://localhost:3333/github/callback
